# fix-wrong-ext

./: Cargo.toml
src/: main.rs
