[package]
name = "fix-wrong-ext"
version = "0.1.0"
authors = ["Nagy Tibor <xnagytibor@protonmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
infer  = { version = "0.16.0", default-features = false, features = ["std"                  ] }
clap   = { version = "4.5.6",  default-features = false, features = ["std", "derive", "help"] }
glob   = { version = "0.3.1",  default-features = false }
camino = { version = "1.1.7",  default-features = false }
sha256 = { version = "1.5.0",  default-features = false }
